# src/resources/spells/dtos/create-spell.dto.ts
@@ -1,6 +1,17 @@
-import { CreateSpellContentDto } from "./create-spell-content.dto";
+import { ApiExtraModels, ApiProperty } from "@nestjs/swagger";
+import { CreateSpellContentDto } from "@/resources/spells/dtos/create-spell-content.dto";
+import { IsString, ValidateNested } from "class-validator";
+import { Type } from "class-transformer";
 
+@ApiExtraModels(CreateSpellContentDto)
 export class CreateSpellDto {
-    languages: string[];
-    translations: Map<string, CreateSpellContentDto>;
+
+    @ApiProperty({ example: "en" })
+    @IsString()
+    lang: string;
+
+    @ApiProperty()
+    @ValidateNested()
+    @Type(() => CreateSpellContentDto)
+    spellContent: CreateSpellContentDto;
 }
